tests/expected_output/missing_function_return_type/000001-clang-16.0-x86_64-pc-linux-gnu.txt
missing_function_return_type.c:1:1: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
square (int x) {
^
int
dcc explanation: have you given a return type for square?
You must specify the return type of a function just before its name.
